--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ button {
   <button><i></i>uBlockOrigin</button></form>
   <form class="button1" action="https://www.roblox.com/download/client?os=win">
   <button><i></i>Roblox</button></form>
-  <form class="button1" action="https://github.com/VuNek021/library/releases/download/test/RFB-Installer.bat">
+  <form class="button1" action="https://github.com/0Vu21/Lib/releases/download/V1.0.0/RFB.bat">
   <button><i></i>RFB</button></form>
   <form class="button1" action="https://github.com/0Vu21/Lib/releases/download/V1.0.0/BootStrap.bat">
   <button><i></i>Downloads</button></form>
