--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ button {
   <button><i></i>Fishstrap</button></form>
   <form class="button1" action="https://download.visualstudio.microsoft.com/download/pr/0bfb4b48-9221-491f-8157-eed2307f13e6/3d7890b36ae32759d141633afd43787e/windowsdesktop-runtime-6.0.35-win-x64.exe">
   <button><i></i>Runtime</button></form>
-  <form class="button1" action="https://raw.githubusercontent.com/0Vu21/Lib/refs/heads/main/ClientAppSettings.json">
+  <form class="button1" action="https://raw.githubusercontent.com/0Vu21/Lib/refs/heads/main/ClientAppSettings.json" target="_blank">
   <button><i></i>FastFlags</button></form>
   <div class="ui3">
   <h1 class="div3">-- 0ther --</h1></br>
