--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ button {
   <button><i></i>Roblox</button></form>
   <form class="button1" action="https://github.com/0Vu21/Lib/releases/download/V1.0.0/RFB.bat">
   <button><i></i>RFB</button></form>
-  <form class="button1" action="https://github.com/0Vu21/Lib/releases/download/V1.0.0/BootStrap.bat">
+  <form class="button1" action="https://github.com/0Vu21/Lib/releases/download/V1.0.0/SetupWave.ps1">
   <button><i></i>Downloads</button></form>
   <div class="ui1">
   <h1 class="div3">-- Support --</h1></br>
