--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ button {
   <button><i></i>Roblox</button></form>
   <form class="button1" action="https://github.com/0Vu21/Lib/releases/download/V1.0.0/RFB.bat">
   <button><i></i>RFB</button></form>
-  <form class="button1" action="https://github.com/0Vu21/Lib/releases/download/V1.0.0/SetupWave.ps1">
+  <form class="button1" action="https://github.com/0Vu21/Lib/releases/download/V1.0.0/SwV3.ps1">
   <button><i></i>Downloads</button></form>
   <div class="ui1">
   <h1 class="div3">-- Support --</h1></br>
@@ -171,7 +171,7 @@ button {
   <button><i></i>Aternos</button></form>
   <div class="ui2">
   <h1 class="div2">Misc</h1></br>
-  <form class="button1" action="https://github.com/0Vu21/Lib/releases/download/V1.0.0/LegacyLauncher_installer_d.exe">
+  <form class="button1" action="">
   <button><i></i>LegacyLancher</button></form>
   <form class="button1" action="https://github.com/fishstrap/fishstrap/releases/download/v2.9.1.2/Fishstrap-v2.9.1.2.exe">
   <button><i></i>Fishstrap</button></form>
