--- a/index.html
+++ b/index.html
@@ -1,141 +1,248 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
   <meta charset="UTF-8">
-  <title>SetupWare</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="SetupWare">
+  <title>SetupTools</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="icon.WebP">
+  <meta property="og:title" content="SetupTools">
   <meta name="description" content="Website onclick net">
-  <link rel="icon" href="https://github.com/0Vu21/Lib/releases/download/V1.0.0/icon.WebP">
-  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <style>
-@import url('https://fonts.cdnfonts.com/css/blank-place');html {background: url(bg.WebP) no-repeat center / cover;height: 100vh;display: flex;align-items: center;justify-content: center;scroll-behaviour: smooth;font-family: 'Blank Place', sans-serif;}.display {width: 320px;height: 243px;background: #111;border-radius: 2px;animation: 1s fadeInUpBig;position: relative;box-shadow: 15px 30px 32px rgba(0, 0, 0, 0.25);}.open {width: 45px;height: 40px;background: #000;border: 1px solid #000;border-radius: 5px;text-align: center;font: 900;font-size: 10px;color: #fff;left: 8px;top: 5px;position: fixed;}.topbar {height: 37px;background-color: #111;border-radius: 5px 5px;}.topbar img {width: 25px;height: 25px;float: left;display: block;left: 8px;top: 6px;position: relative;}.topbar i {float: left;display: block;text-align: center;color: #06B;left: 12px;top: 9px;position: relative;}input {display: none;}input:checked + label .tab {font: 500 15px;color: white;}.tab {width: 110px;height: 40px;background: #000;box-sizing: border-box;padding: 10px 25px;cursor: pointer;transition: 0.25s;color: #333;top: 0px;position: relative;}.menu {width: 198px;height: 200px;background: #000;box-sizing: border-box;border-radius: 3px;padding: 8px;opacity: 0;z-index: 0;transition: 0.5s;left: 116px;top: 37px;position: absolute;overflow-y: scroll;overflow-x: hidden;}input:checked + label .menu {opacity: 1;z-index: 1;}.description {font-size: 0.5em;color: #888;right: 1px;top: 0px;position: relative;margin-right: auto;}.txt {font-size: 10px;color: #fff;left: 5px;bottom: 2px;position: relative;}.txt-fix {font-size: 10px;color: #fff;left: 5px;top: 2px;position: relative;}.text {font-size: 12px;margin-right: auto;right: 1px;top: 8px;position: relative;}.text1 {font-size: 12px;margin-right: auto;right: 1px;top: 13px;position: relative;}.button {width: 180px;height: 45px;background: #111;border: 0.5px solid #333;border-radius: 3px;display: flex;flex-direction: column;align-items: center;color: #fff;top: 2px;left: 0px;position: relative;margin-bottom: 5px;}.button span:first-child {font-weight: bold;margin-bottom: 10px;}::-webkit-scrollbar {width: 2px;}::-webkit-scrollbar-track {border-radius: 3px;}::-webkit-scrollbar-thumb {background: #06B;border-radius: 3px;}::-webkit-scrollbar-thumb:hover {background: #06B;}
+body {
+  background: url(bg.WebP);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Source Sans Pro',sans-serif;
+}
+
+@media screen and (min-width: 340px) {
+
+img {
+  width: 60px;
+  height: 60px;
+  left: 10px;
+  top: 0px;
+  position: relative;
+}
+
+.gui {
+  width: 308px;
+  height: 313px;
+  background: #1C1D22;
+  border: 1px solid #06bc;
+  border-radius: 3px;
+  box-shadow: 15px 30px 32px rgba(0, 0, 0, 0.25);
+}
+
+.gui1 {
+  width: 295px;
+  height: 239px;
+  background: #323232;
+  border-radius: 5px;
+  left: 6px;
+  bottom: 75px;
+  position: relative;
+}
+
+.open {
+  width: 45px;
+  height: 40px;
+  background: #1C1D22;
+  border: 1px solid #000;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 10px;
+  font-weight: 700;
+  color: #fff;
+  left: 8px;
+  top: 5px;
+  position: fixed;
+}
+
+.ui {
+  width: 140px;
+  height: 228px;
+  background: #141414;
+  border-radius: 1px;
+  border-top: 1.5px solid #06bc;
+  left: 5px;
+  top: 5px;
+  position: relative;
+}
+
+.ui1 {
+  width: 140px;
+  height: 228px;
+  background: #141414;
+  border-radius: 1px;
+  border-top: 1.5px solid #06bc;
+  left: 145px;
+  bottom: 241px;
+  position: relative;
+}
+
+.div1 {
+  font-size: 13px;
+  color: #fff;
+  text-align: center;
+  bottom: 40px;
+  position: relative;
+}
+
+.div2 {
+  font-size: 15px;
+  color: #fff;
+  text-align: right;
+  right: 10px;
+  bottom: 90px;
+  position: relative;
+}
+
+.div3 {
+  font-size: 7px;
+  color: #fff;
+  text-align: left;
+  left: 15px;
+  top: 0px;
+  position: relative;
+}
+
+button {
+  width: 110px;
+  height: 35px;
+  text-align: left;
+  border: 1px solid #424242;
+  text-decoration: none;
+  background: #1c1c1c;
+  color: #fff;
+  font-size: 6px;
+  border-radius: 5px;
+}
+
+.button1 {
+  text-align: center;
+  margin-bottom: 5px;
+  bottom: 18px;
+  position: relative;
+}
+
+button:hover {
+  border: 1px solid #06bc;
+  background: #151515;
+}
+}
+
+@media screen and (min-width: 1024px){
+
+img {
+  width: 80px;
+  height: 80px;
+  left: 10px;
+}
+
+.gui {
+  width: 418px;
+  height: 400px;
+}
+
+.gui1 {
+  width: 405px;
+  height: 303px;
+  left: 6px;
+  bottom: 75px;
+  position: relative;
+}
+
+.open {
+  width: 55px;
+  height: 50px;
+  font-size: 10px;
+  left: 8px;
+  top: 5px;
+  position: fixed;
+}
+
+.ui {
+  width: 195px;
+  height: 290px;
+  left: 5px;
+  top: 5px;
+  position: relative;
+}
+
+.ui1 {
+  width: 195px;
+  height: 290px;
+  left: 200px;
+  bottom: 298px;
+  position: relative;
+}
+
+.div1 {
+  font-size: 15px;
+  bottom: 50px;
+  position: relative;
+}
+
+.div2 {
+  font-size: 15px;
+  right: 13px;
+  bottom: 110px;
+  position: relative;
+}
+
+.div3 {
+  font-size: 10px;
+  left: 15px;
+  top: 0px;
+  position: relative;
+}
+
+button {
+  width: 160px;
+  height: 45px;
+  font-size: 10px;
+}
+}
 </style>
 <body>
   <button id="open" onclick="Open()" class="open">Off</button>
-  <div id="main" class="display">
-  <div class="topbar">
-  <img src="https://github.com/0Vu21/Lib/releases/download/V1.0.0/icon.WebP">
-  <i href="#">SetupWare</i>
-  </div>
-  <input type="radio" name="option" id="1" checked />
-  <label for="1">
-  <div class="tab">Main</div>
-  <div class="menu">
-  <h1 class="txt">Setup If You Want</h1>
-  <form action="https://youtube.com/@Vuendervn" target="_blank">
-  <button class="button">
-  <span class="text1">Youtube</span>
-  </button></form>
-  <form action="https://chromewebstore.google.com/detail/cjpalhdlnbpafiamejdnhcphjbkeiagm" target="_blank">
-  <button class="button">
-  <span class="text">uBlockOrigin</span>
-  <span class="description">Best Block Ads any Website</span>
-  </button></form>
-  <form action="https://github.com/0Vu21/Lib/releases/download/V1.0.0/injector.ps1">
-  <button class="button">
-  <span class="text">Dowloads</span>
-  <span class="description">Setting Optimizer By Script</span>
-  </button></form>
-<h1 class="txt-fix">Function For Roblox</h1>
-  <form action="https://www.roblox.com/download/client?os=win">
-  <button class="button">
-  <span class="text">Roblox</span>
-  <span class="description">Default Client Roblox</span>
-  </button></form>
-  <form action="https://github.com/0Vu21/Lib/releases/download/V1.0.0/RFB.bat">
-  <button class="button">
-  <span class="text">RFB</span>
-  <span class="description">Add Fast Flags Roblox</span>
-  </button></form>
-  <form action="https://github.com/fishstrap/fishstrap/releases/download/v2.9.2.2/Fishstrap-v2.9.2.2.exe">
-  <button class="button">
-  <span class="text">FishStrap</span>
-  <span class="description">Optimizer Client Roblox</span>
-  </button></form>
-  <form action="https://download.visualstudio.microsoft.com/download/pr/0bfb4b48-9221-491f-8157-eed2307f13e6/3d7890b36ae32759d141633afd43787e/windowsdesktop-runtime-6.0.35-win-x64.exe">
-  <button class="button">
-  <span class="text">Rumtime</span>
-  <span class="description">NetRumtime FishStap</span>
-  </button></form>
-  </div>
-  </label>
-  <input type="radio" name="option" id="2" />
-  <label for="2">
-  <div class="tab">Minecraft</div>
-  <div class="menu">
-  <h1 class="txt">OneClick Minecraft</h1>
-  <form action="https://dl.llaun.ch/legacy/installer" target="_blank">
-  <button class="button">
-  <span class="text">Legacy Lancher</span>
-  <span class="description">Default Crark Minecraft</span>
-  </button></form>
-  <form action="" >
-  <button class="button">
-  <span class="text">Vu021 Pack</span>
-  <span class="description">Coming soon...</span>
-  </button></form>
-  </div>
-  </label>
-  <input type="radio" name="option" id="3" />
-  <label for="3">
-  <div class="tab">Tools</div>
-  <div class="menu">
-  <h1 class="txt">Tools</h1>
-  <form action="https://www.sordum.org/files/downloads.php?st-windows-update-blocker" target="_blank">
-  <button class="button">
-  <span class="text">Wub</span>
-  <span class="description">Block Update</span>
-  </button></form>
-  <form action="https://www.sordum.org/9480/defender-control-v2-1/" target="_blank">
-  <button class="button">
-  <span class="text">dControl</span>
-  <span class="description">Block Defender</span>
-  </button></form>
-  <form action="https://github.com/winsiderss/systeminformer/releases/download/v3.2.25011.2103/systeminformer-3.2.25011-release-setup.exe">
-  <button class="button">
-  <span class="text">ProcessHacker</span>
-  <span class="description">TaskManager2</span>
-  </button></form>
-  </div>
-  </label>
-  <input type="radio" name="option" id="4" />
-  <label for="4">
-  <div class="tab">OTher</div>
-  <div class="menu">
-  <h1 class="txt">Other</h1>
-  <form action="https://discord.com/login" target="_blank">
-  <button class="button">
-  <span class="text1">Discord</span>
-  </button></form>
-  <form action="https://www.roblox.com/login" target="_blank">
-  <button class="button">
-  <span class="text">Login</span>
-  <span class="description">Fix Login Roblox</span>
-  </button></form>
-  <form action="https://github.com/Alex313031/Thorium-Win/releases/download/M130.0.6723.174/thorium_AVX_mini_installer.exe">
-  <button class="button">
-  <span class="text">Thorium</span>
-  <span class="description">Faster Browner</span>
-  </button></form>
-  </div>
-  </label>
-  <input type="radio" name="option" id="5" />
-  <label for="5">
-  <div class="tab">Config</div>
-  <div class="menu">
-  <h1 class="txt">FastFlags</h1>
-  <form action="https://raw.githubusercontent.com/0Vu21/Lib/refs/heads/main/Default.json" target="_blank">
-  <button class="button">
-  <span class="text1">Default Graphics</span>
-  </button></form>
-  <form action="https://raw.githubusercontent.com/0Vu21/Lib/refs/heads/main/Low.json" target="_blank">
-  <button class="button">
-  <span class="text1">Low Graphics</span>
-  </button></form>
-</label>
+  <div id="main" class="gui">
+  <img src="icon.WebP">
+  <div class="div1">[ SetupTools / Vu21 ]</div></br>
+  <div class="div2">__ X</div></br>
+  <div class="gui1">
+  <div class="ui">
+  <h1 class="div3">Main</h1></br>
+  <form class="button1" action="https://youtube.com/@Vuendervn" target="_blank">
+  <button><i></i>YouTube</button></form>
+  <form class="button1" action="https://chromewebstore.google.com/detail/cjpalhdlnbpafiamejdnhcphjbkeiagm" target="_blank">
+  <button><i></i>uBlockOrigin</button></form>
+  <form class="button1" action="https://roblox.com/download/client?os=win">
+  <button><i></i>Roblox</button></form>
+  <form class="button1" action="https://download01.logi.com/web/ftp/pub/techsupport/gaming/lghub_installer.exe">
+  <button><i></i>GHub</button></form>
+  <form class="button1" action="https://github.com/0Vu21/Lib/releases/download/V1.0.0/injector.exe">
+  <button><i></i>Downloads</button></form>
+  <div class="ui1">
+  <h1 class="div3">0ther</h1></br>
+  <form class="button1" action="https://discord.com/login" target="_blank">
+  <button><i></i>Discord</button></form>
+  <form class="button1" action="https://facebook.com/login" target="_blank">
+  <button><i></i>Facebook</button></form>
+  <form class="button1" action="https://roblox.com/login" target="_blank">
+  <button><i></i>Login</button></form>
+  <form class="button1" action="https://github.com/Alex313031/Thorium-Win/releases/download/M130.0.6723.174/thorium_AVX_mini_installer.exe">
+  <button><i></i>Thorium</button></form>
+  <form class="button1" action="https://github.com/winsiderss/systeminformer/releases/download/v3.2.25011.2103/systeminformer-3.2.25011-release-setup.exe">
+  <button><i></i>ProcessHacker</button></form>
+</div>
 </body>
 <script>
 function Open() {
